# datajoint-lazy-schema

./: .gitignore  datajoint-lazy-schema.code-workspace  dj_local_conf.json  environment.yml  pyproject.toml
scripts/: 01_pipeline_no_edit.ipynb  02_child_rewrite.ipynb  03_schema_activate.ipynb
src/datajoint_extension/: __init__.py  typing.py
src/datajoint_extension/pipeline/: __init__.py  child.py  parent.py
src/datajoint_extension/tables/: __init__.py
src/datajoint_extension/utils/: generic.py  schema.py
src/my_dj_package/: child_ver2.py  custom_pipeline.py
