[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "datajoint-lazy-schema"
description = "DataJoint Extensions"
requires-python = ">=3.10"
authors = [{ name = "Joseph Burling", email = "joseph@datajoint.com" }]
version = "0.0.1"
dependencies = [
    "cryptography",
    "ipython",
    "matplotlib",
    "minio",
    "networkx",
    "numpy",
    "otumat",
    "pandas",
    "pydot",
    "pymysql",
    "pyparsing",
    "tqdm",
    "urllib3",
    "datajoint",
]
